// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders active 1`] = `
<span
  className="KategorieFilter"
>
  <Button
    active={true}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(215, 147, 255, 1.0)",
      }
    }
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="filter"
    />
     
    pěší
  </Button>
</span>
`;

exports[`renders nonactive 1`] = `
<span
  className="KategorieFilter"
>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(80, 124, 239, 0.5)",
      }
    }
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="filter"
    />
     
    koloběžka
  </Button>
</span>
`;
